--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,8 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="tdaglassware2">Indices</a></td>
+        <td><a href="TDAGlassware2">Indices</a></td>
+		<td><a href="TDAGlassWL">WatchList</a></td>        
       </tr>
     </table>
   </body>
